--- a/register-echo-block/package.json
+++ b/register-echo-block/package.json
@@ -21,6 +21,7 @@
     "jest": "^27.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
